--- a/week-6/desrouleaux-exercise-6.3.html
+++ b/week-6/desrouleaux-exercise-6.3.html
@@ -1,4 +1,16 @@
 
+<!--
+============================================
+; Title: Exercise 6.3
+; Author: Lance Desrouleaux
+; Date:5/28/19
+;Modified by: Lance Desrouleaux
+; Description: View models
+;===========================================
+-->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
