--- a/week-4/desrouleaux-exercise-4.3.html
+++ b/week-4/desrouleaux-exercise-4.3.html
@@ -1,3 +1,15 @@
+
+<!--
+============================================
+; Title: Exercise 4.3
+; Author: Lance Desrouleaux
+; Date:
+;Modified by: Lance Desrouleaux
+; Description: HTTP Requests
+;===========================================
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
