--- a/week-6/desrouleuleaux-exercie-6.2.html
+++ b/week-6/desrouleuleaux-exercie-6.2.html
@@ -1,3 +1,15 @@
+
+<!--
+============================================
+; Title: Exercise 6.2
+; Author: Lance Desrouleaux
+; Date: 5/28/19
+;Modified by: Lance Desrouleaux
+; Description: observables
+;===========================================
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
