--- a/week-7/desrouleaux-exercise7.2.html
+++ b/week-7/desrouleaux-exercise7.2.html
@@ -25,6 +25,23 @@
     integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous"
   />
+  <body>
+
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+
+
     <script src="../knockout-3.5.0.js"></script>
 
     <div role="main" class="container">
@@ -76,3 +93,5 @@
       }
        ko.applyBindings(new personalViewModel());
      </script>
+</body>
+</html>
